--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,13 @@ color: #373A3C;
     background-color:  #000000;
     color: #373A3C;
 }
-h3 {
-text-decoration: underline;
-line-height: 0.9;
+.borde {
+   border-top: 10px solid #000000;
+   padding-top: 100px;
+}
+.borde1 {
+  border-top: 2pt solid #ffffff;
+  padding-top: 100px;
 }
 .icono {
 color: #660066;
@@ -48,14 +52,8 @@ color: #660066;
 .imageWorks {
 background-color: #660066;
 }
-@media (min-width: 320px) and (max-width: 416px) {
-#contact h3 {
+@media (min-width: 320px) and (max-width: 516px) {
+.media:before {
 content: 'MI EXPERIENCIA' !important;
-text-decoration:underline;
-}
-}
-@media (max-width: 576px){
-#contact p {
-content: 'Escribe tu pregunta aquí';
 }
 }
